Test for login user is added
